--- a/cpp tasks/Makefile
+++ b/cpp tasks/Makefile
@@ -1,3 +1,5 @@
+
+# since you were creating makefile, Why not create it for all the files and generate a different binary
 all: execute
 execute: task1_main.cpp
 	g++ -std=c++11 task1_main.cpp -lboost_program_options		
